--- a/portal/package.json
+++ b/portal/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-toggle": "^1.1.10",
@@ -34,6 +35,7 @@
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.66.0",
     "react-social-icons": "^6.25.0",
+    "recharts": "^2.15.4",
     "swiper": "^12.0.2",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.1.12",
